[16.November 2008]
- sprinter.rb: fixed a piece of dirt from yesterday
- game.rb: fixed method visibility after yesterday's cleanup
- ladder.rb + testing level + graphic: beginning of a new game object 
  (currently doesn't do anything, just shows)
- monster.rb: documentation modified
- freevikings.rb, fvdef.rb, initfv.rb, game.rb: Loading progressbar made 
  optional (switching with both option and menu)
- game.rb, gamestate.rb: Only keyboard events are given to GameState,
  other events are state independent and as such are served directly
  in Game#every_frame

[15.November 2008]
- gfx/brick_destroyed.tga: destroyed brick is now invisible
- vikingstate.rb, horizontalstate.rb, verticalstate.rb: RD -> RDoc
- game.rb: methods divided into categories m
- gfx/vikings/erik/erik_bullhead_*.tga: awful scratches of erik using his
  "D ability" - "Bullhead"

[12.November 2008]
- game.rb: possibility to cancel loading of a level (press Escape)
- bomb.rb: Flame is animated; destruction is done by Flame, not by
  BombSprite
- wall.rb: animated destruction

[6.November 2008]
- tests/...: fixes of tests broken after modifications in BottomPanel,
  Map loading etc.
- monstermixins.rb: RD->RDoc; fixed one problem in mixin HeroBashing;
  documentation for HeroBashing improved
- structuredworld.rb: fixed error in log message
- location.rb: removed method Location#background
- warior.rb, sprinter.rb, shielder.rb: a bit cleaner way of loading Model
(Modifications listed above took 2 hours and were done because of fixing broken
tests.)
- bomb.rb: Bomb has a visible flame
- docs/develop_guide/ : on Monday or so I worked on the Developer's guide

[1.November 2008]
- bomb.rb: bomb only kills Heroes and Monsters, not all sprites;
           fired bombs are forced to explode
- wall.rb, bomb.rb, BombEtc testing level, gfx/brick*.tga: new game object - 
  smashable wall

[31.October 2008]
- level music stops again when level is exitted (it was broken)